# lexicom_test_task

./: .gitignore  Dockerfile  README.md  docker-compose.yml
app/: app_logger.py  config.py  main.py  pyproject.toml  server_run.sh  test_main.py
app/endpoints/: exceptions.py  models.py  routes.py  utils.py
