[tool.poetry]
name = "lexicom-test-task"
version = "0.1.0"
description = ""
authors = ["Purey Roman <rpurey@mail.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "^2.0.1"
fastapi = {extras = ["uvicorn"], version = "^0.104.1"}
uvicorn = "^0.24.0.post1"
httpx = "^0.25.1"
pytest = "^7.4.3"
trio = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
